# slic

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  gunicorn.conf.py  gunicorn_prod.conf.py  manage.py  nginx_django_production.conf  nginx_django_staging.conf  pyproject.toml  pytest.ini  requirements.txt  slic_django_production.service  slic_django_staging.service
.github/workflows/: test.yml
accounts/: adapter.py  admin.py  apps.py  backends.py  forms.py  models.py  rules.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
docs/: USER_DOCUMENTATION.md  architecture.md  deployment.md  releasing.md  setup.md  testing.md
experiments/: admin.py  apps.py  forms.py  models.py  rules.py  urls.py  views.py  xlsx.py
experiments/management/commands/: migrate_from_rails.py
experiments/migrations/: 0001_initial.py
locale/da/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
responses/: click_urls.py  eaf_parser.py  helpers.py  models.py  urls.py  views.py
responses/migrations/: 0001_initial.py
slic/: __init__.py  context_processors.py  urls.py  wsgi.py
slic/settings/: base.py  development.py  production.py  test.py
static/css/: application.css
static/js/: application.js  click_task.js
tasks/: admin.py  apps.py  forms.py  models.py  rules.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_question_question_type.py
tasks/templatetags/: slic_tags.py
templates/: base.html
templates/account/: email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/accounts/: admin_users.html  profile_edit.html  researcher_invitations.html  view_user.html
templates/bug_reports/: new.html  received.html
templates/experiments/: edit.html  index.html  new.html  show.html  terms.html
templates/pages/: contact_us.html  documentation.html  home.html
templates/responses/: finish.html  home.html  sample_intro.html
templates/responses/tasks/: click_task.html  intermediate_screen_task.html  listening_task.html  question_task.html  sample_task.html
templates/tasks/: click_task_edit.html  click_task_new.html  intermediate_screen_edit.html  intermediate_screen_new.html  listening_task_edit.html  listening_task_new.html  question_task_edit.html  question_task_new.html  sample_task_edit.html  sample_task_new.html
tests/: factories.py  test_auth.py  test_click_responses.py  test_i18n.py  test_next_task.py  test_pages.py  test_participant_flow.py  test_participant_id.py  test_researcher_flow.py
tests/e2e/: conftest.py  test_i18n.py  test_navigation.py  test_participant_flow.py  test_researcher_flow.py  test_static_pages.py
tests/unit/: conftest.py  test_backends.py  test_completion_errors.py  test_forms.py  test_models.py  test_views.py
