[project]
name = "slic"
version = "1.0.0"
description = "SLIC - Salient Language In Context web application"
readme = "README.md"
requires-python = "~=3.12.0"
license-files = ["LICENSE"]
dependencies = [
    "Django==4.2.21",
    "psycopg2-binary==2.9.9",
    "django-allauth==0.63.6",
    "rules==3.3",
    "django-encrypted-model-fields==0.6.5",
    "django-countries==7.6.1",
    "django-recaptcha==4.0.0",
    "django-crispy-forms==2.1",
    "crispy-bootstrap4==2024.1",
    "openpyxl==3.1.2",
    "Markdown==3.6",
    "gunicorn==22.0.0",
    "whitenoise==6.7.0",
    "python-dotenv==1.0.1",
    "Pillow==10.3.0",
    "cryptography==42.0.8",
    "bleach==6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.8",
    "pytest-django==4.8.0",
    "pytest-playwright==0.5.1",
    "bump-my-version==0.28.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "slic.settings.development"
python_files = ["tests/e2e/test_*.py", "tests/unit/test_*.py"]
filterwarnings = ["ignore::DeprecationWarning:openpyxl"]
